--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@
 
 html {
 	width: 100vw;
-	height: 100vw;
+	height: 50vw;
 	font-size: 62.5%;
 	color: white;
 	font-family: 'Lato', sans-serif;
@@ -73,7 +73,7 @@ header {
 }
 
 main {
-	height: 93vh;
+	height: 53vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -145,7 +145,58 @@ main {
     width: 100%;
 }
 
+footer{
+	margin-top: 80px;
+	position: static;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 30px;
+    color: #fff;
+}
 
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+	line-height: 3rem;
+}
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.footer-bottom{
+    background: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+}
 
 
 
