--- a/src/css/calistenia.css
+++ b/src/css/calistenia.css
@@ -57,6 +57,12 @@ header {
 	position: relative;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+    text
+}
+
 .menu-content .list-items a:before {
 	content: ' ';
 	position: absolute;
@@ -89,7 +95,13 @@ header {
     flex: 0.5;
     margin: 10px;
     position: relative;
-    transition: flex 0.7s ease-in;
+    transition: flex 0.5s ease-in;
+}
+
+.panel button {
+    background: transparent;
+    border: none;
+    font-size:0;
 }
 
 .panel h3 {
@@ -110,6 +122,81 @@ header {
     opacity: 1;   
 }
 /* Fim do Expand Cards */
+button {
+    justify-content: center;
+    gap: 20px;
+}
+
+.panel.active button {
+    width: 180px;
+    height: 60px;
+    cursor: pointer;
+    border: 1px solid white;
+    background-color: #cbbb92;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 20px;
+    transition: 1.5s;
+    margin-top: 400px;
+    margin-left: 30px;
+    font-size: 15px;
+}
+
+
+footer{
+	margin-top: 80px;
+	position: static;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 30px;
+    color: #fff;
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+	line-height: 3rem;
+}
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.footer-bottom{
+    background: #000;
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+}
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+.footer-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+}
+
 footer{
 	margin-top: 250px;
 	position: static;
