--- a/src/css/calistenia.css
+++ b/src/css/calistenia.css
@@ -90,7 +90,7 @@ a {
     height: 80vh;
     color: aliceblue;
     cursor: pointer;
-    border-radius: 50px;
+    border-radius: 60px;
     flex: 0.5;
     margin: 10px;
     position: relative;
@@ -135,13 +135,56 @@ button {
     color: white;
     text-transform: uppercase;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 15px;
     transition: 1.5s;
     margin-top: 400px;
     margin-left: 30px;
     font-size: 15px;
 }
 
+.eye:hover {
+    background-color: #dbd1b4;
+}
+
+.eye {
+    outline: none;
+    overflow: hidden;
+    padding: 0 24px;
+    display: inline-flex;
+	align-items: center;
+    font-size: 1em;
+	background: rgba(0, 0, 0, 0.08);
+    height: 100%;
+    border-radius: 15px;
+}
+
+span {
+    display: inline-flex;
+	align-items: center;
+	padding: 0 10px;
+	color: #fff;
+	height: 100%;
+}
+
+#abs {
+    margin-right: -10px;
+}
+
+#bra{
+    margin-right: -20px;
+}
+
+#pei {
+    margin-right: -11px;
+}
+
+#cos {
+    margin-right: -30px;
+}
+
+#qua{
+    margin-right: -30px;
+}
 
 footer{
 	margin-top: 80px;
