--- a/src/css/bra.css
+++ b/src/css/bra.css
@@ -125,7 +125,7 @@ footer{
     font-weight: 200;
 }
 
-.txt-ombro, .txt-biceps, .txt-triceps, .txt-ant {
+.txt-bas {
     width: 850px;
     font-size: 4em;
     margin-bottom: 2em;
@@ -137,24 +137,19 @@ footer{
     padding-top: 25px;
 }
 
-.bar-ombro, .bar-biceps, .bar-triceps, .bar-ant {
+.bar-bas {
     background-color: #20262E;
     height: 100px;
     margin-bottom: 4em;
 }
 
-#img-ombro {
-    margin-left: 17em;
-    margin-right: 10em;
-}
-
-#img-biceps, #img-biceps2, #img-triceps, #img-triceps2, #img-ant, #img-ant2 {
-	margin-left: 5em;
-	margin-right: 5em;
-}
-
-#img-triceps3 {
-	margin-left: 5em;
-	margin-right: 5em;
-	margin-top: 5em;
+.basi {
+	background-color: #FFFBF5;
+	width: 70%;
+	align-items: center;
+	margin: auto;
+	padding: 20px;
+	border-radius: 25px;
+	color: #000;
+	font-size: 14px;
 }
