--- a/src/css/treino.css
+++ b/src/css/treino.css
@@ -156,3 +156,53 @@ footer{
 	text-align: center;
 	margin-bottom: 3px;
 }
+
+.btns {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+	margin-top: 15%;
+    margin-bottom: 15%;
+}
+
+.btns button {
+    width: 250px;
+    height: 60px;
+    cursor: pointer;
+    border: 1px solid black;
+    color: white;
+    text-transform: uppercase;
+    background-color: transparent;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    border-radius: 20px;
+    position: relative;
+    transition: 1.5s;
+}
+
+.btns button:hover {
+    color: rgb(251, 255, 0);
+    border: none;
+}
+
+.btns button:before {
+    content: ' ';
+    border-radius: 20px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 0;
+    height: 60px;
+    background-color: #FFD966;
+    z-index: -1;
+    transition: 1s;
+}
+
+.btns button:hover:before {
+    width: 100%;
+}
+
+button a {
+	text-decoration: none;
+	color: black;
+}
