--- a/src/css/treino.css
+++ b/src/css/treino.css
@@ -206,3 +206,161 @@ button a {
 	text-decoration: none;
 	color: black;
 }
+
+@media screen and (max-width: 768px) {
+    .menu-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 8px;
+        width: 100%;
+    }
+
+    .list-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo {
+        margin-bottom: 20px;
+        font-size: 10px;
+    }
+
+    .header-menu {
+        margin-left: 0;
+    }
+
+    .txt-segunda {
+        text-align: center;
+        font-size: 20px;
+        margin-left: auto;
+    }
+
+    .est {
+        margin-bottom: 30px;
+        margin: 4%;
+    }
+
+    #img-est {
+        display: block;
+        margin: auto;
+        height: 150px;
+        flex-direction: row;
+    }
+
+    .txt-est, .s-1 {
+        text-align: center;
+        font-size: 10px;
+        width: 100%;
+    }
+
+    footer{
+        margin-top: 80px;
+        position: static;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: #111;
+        height: auto;
+        width: 100vw;
+        font-family: "Open Sans";
+        padding-top: 30px;
+        color: #fff;
+        clear: both;
+        margin-top: 50%;
+    }
+    
+    .footer-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .footer-content h3{
+        font-size: 1.8rem;
+        font-weight: 400;
+        text-transform: capitalize;
+        line-height: 3rem;
+    }
+    
+    .footer-content p{
+        max-width: 500px;
+        margin: 10px auto;
+        line-height: 28px;
+        font-size: 10px;
+    }
+    
+    .footer-bottom{
+        background: #000;
+        width: 100vw;
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footer-bottom p{
+        font-size: 10px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+    }
+    .footer-bottom span{
+        text-transform: uppercase;
+        opacity: .4;
+        font-weight: 200;
+    }
+
+    .btns {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-top: 15%;
+        margin-bottom: 15%;
+        margin-left: 30%;
+    }
+    
+    .btns button {
+        width: 60%;
+        height: 60px;
+        cursor: pointer;
+        border: 1px solid black;
+        color: white;
+        text-transform: uppercase;
+        background-color: transparent;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        border-radius: 20px;
+        position: relative;
+        transition: 1.5s;
+    }
+    
+    .btns button:hover {
+        color: rgb(251, 255, 0);
+        border: none;
+    }
+    
+    .btns button:before {
+        content: ' ';
+        border-radius: 20px;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        width: 0;
+        height: 60px;
+        background-color: #FFD966;
+        z-index: -1;
+        transition: 1s;
+    }
+    
+    .btns button:hover:before {
+        width: 100%;
+    }
+    
+    button a {
+        text-decoration: none;
+        color: black;
+    }
+    
+}
