--- a/src/css/calistenia.css
+++ b/src/css/calistenia.css
@@ -291,3 +291,212 @@ footer{
     opacity: .4;
     font-weight: 200;
 }
+
+@media screen and (max-width: 768px) {
+	.menu-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 8px;
+        width: 80%;
+    }
+
+    .list-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo {
+        margin-bottom: 20px;
+        font-size: 10px;
+    }
+
+    .header-menu {
+        margin-left: 10;
+    }
+
+    footer{
+        position: static;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: #111;
+        height: auto;
+        width: 100%;
+        font-family: "Open Sans";
+        padding-top: 30px;
+        color: #fff;
+        clear: both;
+        margin-top: 50%;
+    }
+    
+    .footer-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .footer-content h3{
+        font-size: 18px;
+        text-transform: capitalize;
+        line-height: 3rem;
+    }
+    
+    .footer-content p{
+        width: 99%;
+        margin: 10px auto;
+        line-height: 28px;
+        font-size: 10px
+    }
+    
+    .footer-bottom{
+        background: #000;
+        width: 100vw;
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footer-bottom p{
+        font-size: 10px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+    }
+    .footer-bottom span{
+        text-transform: uppercase;
+        opacity: .4;
+    }
+
+    .btns {
+        display: grid;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+    
+    .btns button {
+        width: 100%;
+        height: 60px;
+        cursor: pointer;
+        border: 1px solid black;
+        color: white;
+        text-transform: uppercase;
+        background-color: transparent;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        border-radius: 20px;
+        transition: 1.5s;
+    }
+    
+    .btns button:hover {
+        color: rgb(251, 255, 0);
+        border: none;
+    }
+    
+    .btns button:before {
+        content: ' ';
+        border-radius: 20px;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        width: 0;
+        height: 60px;
+        background-color: #FFD966;
+        z-index: -1;
+        transition: 1s;
+    }
+    
+    .btns button:hover:before {
+        width: 100%;
+    }
+    
+    button a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .container {
+        margin-top: 150px;
+        display: flex;
+        width: 50vw;
+    }
+
+    .panel {
+        background-size: cover 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 80vh;
+        color: aliceblue;
+        cursor: pointer;
+        border-radius: 60px;
+        flex: 0.5;
+        margin: 5px;
+        position: relative;
+        transition: flex 0.5s ease-in;
+    }
+    
+    .panel button {
+        background: transparent;
+        border: none;
+        font-size:0;
+    }
+    
+    .panel h3 {
+        font-size: 24px;
+        position: absolute;
+        bottom: 20px;
+        left: 30px;
+        margin: 0;
+        opacity: 0;
+        color: black;
+    }
+    
+    .panel.active {
+        flex: 1;
+    }
+
+    .panel.active button {
+        width: 100px;
+        height: 60px;
+        cursor: pointer;
+        border: 1px solid white;
+        background-color: #cbbb92;
+        color: white;
+        text-transform: uppercase;
+        font-weight: bold;
+        border-radius: 15px;
+        transition: 1.5s;
+        margin-top: 400px;
+        margin-left: 10px;
+        font-size: 10px;
+    }
+    
+    .eye:hover {
+        background-color: #dbd1b4;
+    }
+    
+    .eye {
+        outline: none;
+        overflow: hidden;
+        padding: 0 24px;
+        display: inline-flex;
+        align-items: center;
+        font-size: 1em;
+        background: rgba(0, 0, 0, 0.08);
+        height: 100%;
+        border-radius: 15px;
+    }
+    
+    span {
+        display: inline-flex;
+        align-items: center;
+        padding: 0 10px;
+        color: #fff;
+        height: 100%;
+    }
+
+}
