--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 }
 
 html {
-	width: 100vw;
+	width: 100%;
 	height: 50vw;
 	font-size: 62.5%;
 	color: white;
@@ -87,7 +87,7 @@ main {
 }
 
 .primary-text {
-	width: 850px;
+	width: 100%;
 	font-size: 5em;
 	margin-bottom: 2rem;
 	text-align: center;
@@ -105,7 +105,6 @@ main {
     display: flex;
     justify-content: center;
     gap: 20px;
-	
 }
 
 .btns button {
@@ -147,10 +146,7 @@ main {
 
 footer{
 	margin-top: 80px;
-	position: static;
     bottom: 0;
-    left: 0;
-    right: 0;
     background: #111;
     height: auto;
     width: 100vw;
@@ -198,6 +194,170 @@ footer{
     font-weight: 200;
 }
 
+@media screen and (max-width: 768px) {
+	.menu-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 8px;
+    }
+
+    .list-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo {
+        margin-bottom: 20px;
+        font-size: 10px;
+    }
+
+    .header-menu {
+        margin-left: 10;
+    }
+
+    footer{
+        position: static;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: #111;
+        height: auto;
+        width: 100%;
+        font-family: "Open Sans";
+        padding-top: 30px;
+        color: #fff;
+        clear: both;
+        margin-top: 50%;
+    }
+    
+    .footer-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .footer-content h3{
+        font-size: 18px;
+        text-transform: capitalize;
+        line-height: 3rem;
+    }
+    
+    .footer-content p{
+        width: 99%;
+        margin: 10px auto;
+        line-height: 28px;
+        font-size: 10px
+    }
+    
+    .footer-bottom{
+        background: #000;
+        width: 100vw;
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footer-bottom p{
+        font-size: 10px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+    }
+    .footer-bottom span{
+        text-transform: uppercase;
+        opacity: .4;
+    }
+
+    .btns {
+        display: grid;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-top: 15%;
+        margin-bottom: 15%;
+    }
+    
+    .btns button {
+        width: 100%;
+        height: 60px;
+        cursor: pointer;
+        border: 1px solid black;
+        color: white;
+        text-transform: uppercase;
+        background-color: transparent;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        border-radius: 20px;
+        transition: 1.5s;
+    }
+    
+    .btns button:hover {
+        color: rgb(251, 255, 0);
+        border: none;
+    }
+    
+    .btns button:before {
+        content: ' ';
+        border-radius: 20px;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        width: 0;
+        height: 60px;
+        background-color: #FFD966;
+        z-index: -1;
+        transition: 1s;
+    }
+    
+    .btns button:hover:before {
+        width: 100%;
+    }
+    
+    button a {
+        text-decoration: none;
+        color: black;
+    }
+
+	main {
+		height: auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-top: 5%;
+	}
+	
+	.main-content {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.primary-text {
+		width: 100%;
+		font-size: 20px;
+		margin-bottom: 2rem;
+		text-align: center;
+		margin-top: 0;
+	}
+	
+	.second-text {
+		margin-bottom: 7rem;
+		font-size: 10px;
+		color: gray;
+		text-transform: uppercase;
+	}
+
+	body {
+		background: linear-gradient(rgba(17, 17, 17, 0.8), rgba(20, 20, 20, 1)), url(/img/rep.jpg);
+		background-position: center center;
+		background-position-y: 0px;
+		background-repeat: no-repeat;
+	}
+
+}
 
 
 
