--- a/src/css/bra.css
+++ b/src/css/bra.css
@@ -125,7 +125,7 @@ footer{
     font-weight: 200;
 }
 
-.txt-bas {
+.txt-c {
     width: 850px;
     font-size: 4em;
     margin-bottom: 2em;
@@ -137,7 +137,7 @@ footer{
     padding-top: 25px;
 }
 
-.bar-bas {
+.bar-c {
     background-color: #20262E;
     height: 100px;
     margin-bottom: 4em;
@@ -152,4 +152,172 @@ footer{
 	border-radius: 25px;
 	color: #000;
 	font-size: 14px;
+}
+
+#img-c {
+    margin-left: 17em;
+    margin-right: 10em;
+    height: 360px;
+    width: 27%;
+    border-radius: 10px;
+    box-shadow: 24px 39px 50px 22px rgba(0,0,0,0.75);
+	margin-bottom: 5%;
+}
+
+@media screen and (max-width: 768px) {
+    .menu-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 8px;
+        width: 100%;
+    }
+
+    .list-items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .logo {
+        margin-bottom: 20px;
+        font-size: 10px;
+    }
+
+    .header-menu {
+        margin-left: 0;
+    }
+
+    #img-c {
+        display: flex;
+        margin: auto;
+        height: 150px;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 27%;
+        margin-bottom: 6%;
+		box-shadow: none;
+    }
+
+    .txt-c {
+        text-align: center;
+        font-size: 20px;
+        margin-left: auto;
+    }
+
+    .txt-est, .s-1 {
+        text-align: center;
+        font-size: 10px;
+        width: 100%;
+    }
+
+    footer{
+        margin-top: 80px;
+        position: static;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: #111;
+        height: auto;
+        width: 100vw;
+        font-family: "Open Sans";
+        padding-top: 30px;
+        color: #fff;
+        clear: both;
+        margin-top: 50%;
+    }
+    
+    .footer-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .footer-content h3{
+        font-size: 1.8rem;
+        font-weight: 400;
+        text-transform: capitalize;
+        line-height: 3rem;
+    }
+    
+    .footer-content p{
+        max-width: 500px;
+        margin: 10px auto;
+        line-height: 28px;
+        font-size: 10px;
+    }
+    
+    .footer-bottom{
+        background: #000;
+        width: 100vw;
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footer-bottom p{
+        font-size: 10px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+    }
+    .footer-bottom span{
+        text-transform: uppercase;
+        opacity: .4;
+        font-weight: 200;
+    }
+
+    .btns {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-top: 15%;
+        margin-bottom: 15%;
+        margin-left: 30%;
+    }
+    
+    .btns button {
+        width: 60%;
+        height: 60px;
+        cursor: pointer;
+        border: 1px solid black;
+        color: white;
+        text-transform: uppercase;
+        background-color: transparent;
+        font-weight: bold;
+        letter-spacing: 0.2rem;
+        border-radius: 20px;
+        position: relative;
+        transition: 1.5s;
+    }
+    
+    .btns button:hover {
+        color: rgb(251, 255, 0);
+        border: black;
+    }
+    
+    .btns button:before {
+        content: ' ';
+        border-radius: 20px;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        width: 0;
+        height: 60px;
+        background-color: #FFD966;
+        z-index: -1;
+        transition: 1s;
+    }
+    
+    .btns button:hover:before {
+        width: 100%;
+    }
+    
+    button a {
+        text-decoration: none;
+        color: black;
+    }
+    
 }
