--- a/src/css/calistenia.css
+++ b/src/css/calistenia.css
@@ -422,7 +422,7 @@ footer{
     .container {
         margin-top: 150px;
         display: flex;
-        width: 50vw;
+        width: 100%;
     }
 
     .panel {
@@ -454,13 +454,18 @@ footer{
         opacity: 0;
         color: black;
     }
+
+    .eye {
+        display: none;
+        visibility: hidden;
+    }
     
     .panel.active {
         flex: 1;
     }
 
     .panel.active button {
-        width: 100px;
+        width: 150px;
         height: 60px;
         cursor: pointer;
         border: 1px solid white;
@@ -473,22 +478,6 @@ footer{
         margin-top: 400px;
         margin-left: 10px;
         font-size: 10px;
-    }
-    
-    .eye:hover {
-        background-color: #dbd1b4;
-    }
-    
-    .eye {
-        outline: none;
-        overflow: hidden;
-        padding: 0 24px;
-        display: inline-flex;
-        align-items: center;
-        font-size: 1em;
-        background: rgba(0, 0, 0, 0.08);
-        height: 100%;
-        border-radius: 15px;
     }
     
     span {
