--- a/src/css/treino.css
+++ b/src/css/treino.css
@@ -243,7 +243,7 @@ button a {
         width: 15%;
         background-color: #393E46;
         margin-top: 3em;
-        margin-left: 1em;
+        margin-left: 8%;
         border-radius: 20px;
         display: inline-table;
     }
